
// === Bug Fixes

// The following bugs have been fixed:

//* wsbuglink:5000[]
//* wsbuglink:6000[Wireshark bug]
//* cveidlink:2014-2486[]
//* Wireshark exposed details your sordid redneck past, which were subsequently widely disseminated on social media.

=== New and Updated Features

The following features are new (or have been significantly updated) since version 3.3.1:

* Nothing of note.

The following features are new (or have been significantly updated) since version 3.3.0:

* The Windows installers now ship with Npcap 1.00.
  They previously shipped with Npcap 0.9997.
* The Windows installers now ship with Qt 5.15.1.
  They previously shipped with Qt 5.12.8.

The following features are new (or have been significantly updated) since version 3.2.0:

* Windows executables and installers are now https://support.microsoft.com/en-us/help/4472027/2019-sha-2-code-signing-support-requirement-for-windows-and-wsus[signed using SHA-2 only].
* Save RTP stream to .au supports any codec with 8000 Hz rate supported by Wireshark (shown in RTP player). If save of audio is not possible (unsupported codec or rate), silence of same length is saved and warning is shown.
* Asynchronous DNS resolution is always enabled. As a result, the c-ares library is now a required dependency.
* Protobuf fields can be dissected as Wireshark (header) fields that allows user input
  the full names of Protobuf fields or messages in Filter toolbar for searching.
* Dissectors based on Protobuf can register themselves to a new 'protobuf_field' dissector table,
  which is keyed with the full names of fields, for further parsing fields of BYTES or STRING type.
* Wireshark is able to decode, play, and save iLBC payload on platforms where the https://github.com/TimothyGu/libilbc[iLBC library] is available.
* Wireshark is able to decode, play, and save opus payload on platforms where the https://opus-codec.org/[opus library] is available.